--- a/plausible/.env.example
+++ b/plausible/.env.example
@@ -1,5 +1,5 @@
-BASE_URL=http://localhost:8000
-SECRET_KEY_BASE=# openssl rand -base64 64 | tr -d '\n' ; echo
-DATABASE_URL=postgres://user:password@postgres/stats_db
-ADMIN_USER_PWD=
-SMTP_USER_PWD=
+PLAUSIBLE_BASE_URL=http://localhost:8000
+PLAUSIBLE_SECRET_KEY_BASE=# openssl rand -base64 64
+PLAUSIBLE_DATABASE_URL=postgres://user:password@postgres/stats_db
+PLAUSIBLE_ADMIN_USER_PWD=
+PLAUSIBLE_SMTP_USER_PWD=
