--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -1,4 +1,4 @@
-CLOUDFLARE_TOKEN=
+TRAEFIK_CLOUDFLARE_TOKEN=
 # https://dash.cloudflare.com/profile/api-tokens
 # Permissions
 # zone - zone settings - read
