--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -8,24 +8,24 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
-      - traefik-proxy
+      - hp1-network
     ports:
       - 80:80
       - 443:443
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./traefik.yml:/traefik.yml:ro
-      - ./acme.json:/acme.json
-      - ./config.yml:/config.yml:ro
+      - ./config/traefik.yml:/traefik.yml:ro
+      - ./config/acme.json:/acme.json
+      - ./config/config.yml:/config.yml:ro
     labels:
       traefik.enable: true
       traefik.http.routers.traefik.entrypoints: https
       traefik.http.routers.traefik.service: api@internal
     environment:
-      CF_DNS_API_TOKEN: ${CLOUDFLARE_TOKEN:?cloudflare token required}
+      CF_DNS_API_TOKEN: ${TRAEFIK_CLOUDFLARE_TOKEN:?error}
 
 networks:
-  traefik-proxy:
+  hp1-network:
     driver: bridge
     external: true
