--- a/authelia/.env.example
+++ b/authelia/.env.example
@@ -1,7 +1,6 @@
-# Use "openssl rand -base64 30" to generate secrets
-AUTHELIA_JWT_SECRET=
-AUTHELIA_SESSION_SECRET=
-AUTHELIA_STORAGE_ENCRYPTION_KEY=
+AUTHELIA_JWT_SECRET=# openssl rand -base64 32
+AUTHELIA_SESSION_SECRET=# openssl rand -base64 32
+AUTHELIA_STORAGE_ENCRYPTION_KEY=# openssl rand -base64 32
 AUTHELIA_STORAGE_MYSQL_PASSWORD=
 AUTHELIA_NOTIFIER_SMTP_PASSWORD=
 AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD=
