--- a/lldap/.env.example
+++ b/lldap/.env.example
@@ -1,5 +1,4 @@
-LLDAP_JWT_SECRET=
-LLDAP_LDAP_USER_PASS=
-LLDAP_SMTP_OPTIONS__PASSWORD=
-
-# DATABASE_URL=mysql://db_ldap:password@mariadb/db_ldap
+LLDAP_JWT_SECRET=# openssl rand -base64 32
+LLDAP_LDAP_USER_PASS=# openssl rand -base64 32
+LLDAP_SMTP_OPTIONS_PASSWORD=
+LLDAP_DATABASE_URL=mysql://user_ldap:PASSWORD@mariadb/db_ldap
