--- a/lldap/docker-compose.yml
+++ b/lldap/docker-compose.yml
@@ -8,20 +8,22 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
-      - traefik-proxy
+      - hp1-network
     labels:
       traefik.enable: true
       traefik.http.routers.ldap.entrypoints: https
       traefik.http.services.ldap.loadbalancer.server.port: 17170
     volumes:
-      - ./data:/data
+      - ./config:/data
     environment:
       LLDAP_JWT_SECRET: ${LLDAP_JWT_SECRET:?error}
       LLDAP_LDAP_USER_PASS: ${LLDAP_LDAP_USER_PASS:?error}
       LLDAP_SMTP_OPTIONS__PASSWORD: ${LLDAP_SMTP_OPTIONS__PASSWORD:?error}
-      # TODO: DATABASE_URL: ${DATABASE_URL:?error}
+      LLDAP_DATABASE_URL: ${LLDAP_DATABASE_URL:?error}
+    # ports:
+    #   - 389:389
 
 networks:
-  traefik-proxy:
+  hp1-network:
     driver: bridge
     external: true
