--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
-      - traefik-proxy
+      - hp1-network
     labels:
       traefik.enable: true
       traefik.http.routers.portainer.entrypoints: https
@@ -16,9 +16,9 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - .:/data
+      - ./data:/data
 
 networks:
-  traefik-proxy:
+  hp1-network:
     driver: bridge
     external: true
