--- a/status/docker-compose.yml
+++ b/status/docker-compose.yml
@@ -8,8 +8,7 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
-      - database-net
-      - traefik-proxy
+      - hp1-network
     labels:
       traefik.enable: true
       traefik.http.routers.status.entrypoints: https
@@ -18,9 +17,6 @@ services:
       - ./data:/app/data
 
 networks:
-  database-net:
-    driver: bridge
-    external: true
-  traefik-proxy:
+  hp1-network:
     driver: bridge
     external: true
