--- a/teleport/docker-compose.yml
+++ b/teleport/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
-      - traefik-proxy
+      - hp1-network
     labels:
       traefik.enable: true
       traefik.http.routers.teleport.entryPoints: https
@@ -26,6 +26,6 @@ services:
       - 3080:3080
 
 networks:
-  traefik-proxy:
+  hp1-network:
     driver: bridge
     external: true
