--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -8,15 +8,15 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
-      - traefik-proxy
+      - hp1-network
     labels:
       traefik.enable: true
       traefik.http.routers.vault.entrypoints: https
       traefik.http.services.vault.loadbalancer.server.port: 8200
       com.centurylinklabs.watchtower.monitor-only: true
-    volumes:
-      - ./data:/vault/file
-      - ./config:/vault/config
+      volumes:
+        - ./data:/vault/file
+        - ./config:/vault/config
     environment:
       VAULT_ADDR: https://vault.castelnuovo.dev
       VAULT_API_ADDR: https://vault.castelnuovo.dev
@@ -25,6 +25,6 @@ services:
       - IPC_LOCK
 
 networks:
-  traefik-proxy:
+  hp1-network:
     driver: bridge
     external: true
