--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -18,4 +18,4 @@ services:
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER: mx.email.castelnuovo.dev
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT: 25
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER: castelnuovo/production
-      WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD: ${MAIL_PASSWORD:?error}
+      WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD: ${WATCHTOWER_MAIL_PASSWORD:?error}
