--- a/lldap/docker-compose.yml
+++ b/lldap/docker-compose.yml
@@ -19,9 +19,9 @@ services:
       LLDAP_JWT_SECRET: ${LLDAP_JWT_SECRET:?error}
       LLDAP_LDAP_USER_PASS: ${LLDAP_LDAP_USER_PASS:?error}
       LLDAP_SMTP_OPTIONS_PASSWORD: ${LLDAP_SMTP_OPTIONS_PASSWORD:?error}
-      LLDAP_DATABASE_URL: ${LLDAP_DATABASE_URL:?error}
-    # ports:
-    #   - 389:389
+      # LLDAP_DATABASE_URL: ${LLDAP_DATABASE_URL:?error}
+      # ports:
+      #   - 389:389
 
 networks:
   hp1-network:
