--- a/authelia/config/configuration.yml
+++ b/authelia/config/configuration.yml
@@ -153,7 +153,7 @@ storage:
 notifier:
   disable_startup_check: true
   smtp:
-    host: mx.mail.castelnuovo.dev
+    host: mail.castelnuovo.dev
     port: 25
     username: castelnuovo/production
     sender: "authelia@mail.castelnuovo.dev"
