--- a/invoices/docker-compose.yml
+++ b/invoices/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       DB_USERNAME: user_invoices
       DB_PASSWORD: ${INVOICES_DB_PASSWORD:?error}
 
-      MAIL_HOST: mx.mail.castelnuovo.dev
+      MAIL_HOST: mail.castelnuovo.dev
       MAIL_PORT: 25
       MAIL_USERNAME: castelnuovo/production
       MAIL_PASSWORD: ${INVOICES_MAIL_PASSWORD:?error}
