--- a/authelia/config/configuration.yml
+++ b/authelia/config/configuration.yml
@@ -54,9 +54,9 @@ access_control:
 
     - domain: ldap.castelnuovo.dev
       policy: bypass
-      policy: two_factor
-      subject:
-      - "group:ldap.castelnuovo.dev"
+      # policy: two_factor
+      # subject:
+      # - "group:ldap.castelnuovo.dev"
 
     - domain: portainer.castelnuovo.dev
       policy: bypass
@@ -78,7 +78,7 @@ access_control:
       policy: bypass
       # policy: two_factor
       # subject:
-        # - group:postal.castelnuovo.dev
+      # - group:postal.castelnuovo.dev
 
     - domain: traefik.castelnuovo.dev
       policy: two_factor
