Tmp bypass multiple domains

--- a/authelia/config/configuration.yml
+++ b/authelia/config/configuration.yml
@@ -64,9 +64,10 @@ access_control:
         - "^/api/webhooks([/?].*)?$"
 
     - domain: portainer.castelnuovo.dev
-      policy: two_factor
-      subject:
-        - "group:portainer.castelnuovo.dev"
+      policy: bypass
+      # policy: two_factor
+      # subject:
+      #   - "group:portainer.castelnuovo.dev"
 
     - domain: postal.castelnuovo.dev
       policy: bypass
@@ -81,9 +82,10 @@ access_control:
       # - group:postal.castelnuovo.dev
 
     - domain: traefik.castelnuovo.dev
-      policy: two_factor
-      subject:
-        - "group:traefik.castelnuovo.dev"
+      policy: bypass
+      # policy: two_factor
+      # subject:
+      #   - "group:traefik.castelnuovo.dev"
 
 theme: dark
 default_redirection_url: https://authelia.castelnuovo.dev
