--- a/authelia/config/configuration.yml
+++ b/authelia/config/configuration.yml
@@ -26,8 +26,8 @@ access_control:
     # - "^/api/v1([/?].*)?$"
     - domain: invoices.castelnuovo.dev
       policy: one_factor
-      # subject: # TODO: add group
-      #   - group:invoices.castelnuovo.dev
+      subject:
+        - group:invoices.castelnuovo.dev
 
     - domain: stats.castelnuovo.dev
       policy: bypass
@@ -40,22 +40,22 @@ access_control:
 
     - domain: stats.castelnuovo.dev
       policy: one_factor
-      # subject: # TODO: add group
-      #   - group:stats.castelnuovo.dev
+      subject:
+        - group:stats.castelnuovo.dev
 
     # Two-factor rules
     ####################
     - domain:
         - hp1.castelnuovo.dev
         - hp2.castelnuovo.dev
-      policy: bypass # TODO: two_factor
-      # subject: # TODO: add group
-      #   - group:hp.castelnuovo.dev
+      policy: two_factor
+      subject:
+        - group:hp.castelnuovo.dev
 
     - domain: ldap.castelnuovo.dev
-      policy: bypass # TODO: two_factor
-      # subject: # TODO: add group
-      #   - group:ldap.castelnuovo.dev
+      policy: two_factor
+      subject:
+        - group:ldap.castelnuovo.dev
 
     - domain: portainer.castelnuovo.dev
       policy: bypass
@@ -63,9 +63,9 @@ access_control:
         - "^/api/webhooks([/?].*)?$"
 
     - domain: portainer.castelnuovo.dev
-      policy: bypass # TODO: two_factor
-      # subject: # TODO: add group
-      #   - group:portainer.castelnuovo.dev
+      policy: two_factor
+      subject:
+        - group:portainer.castelnuovo.dev
 
     - domain: postal.castelnuovo.dev
       policy: bypass
@@ -74,14 +74,14 @@ access_control:
         - "^/.well-known([/?].*)?$"
 
     - domain: postal.castelnuovo.dev
-      policy: bypass # TODO: two_factor
-      # subject: # TODO: add group
-      # - group:postal.castelnuovo.dev
+      policy: two_factor
+      subject:
+        - group:postal.castelnuovo.dev
 
     - domain: traefik.castelnuovo.dev
       policy: two_factor
-      # subject: # TODO: add group
-      #   - group:traefik.castelnuovo.dev
+      subject:
+        - group:traefik.castelnuovo.dev
 
 theme: dark
 default_redirection_url: https://authelia.castelnuovo.dev
