--- a/teleport/docker-compose.yml
+++ b/teleport/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   teleport:
-    image: quay.io/gravitational/teleport:11
+    image: public.ecr.aws/gravitational/teleport:11
     container_name: teleport
     restart: unless-stopped
     security_opt:
@@ -12,18 +12,18 @@ services:
     labels:
       traefik.enable: true
       traefik.http.routers.teleport.entryPoints: https
-      traefik.http.services.teleport.loadbalancer.server.port: 3080
+      traefik.http.services.teleport.loadbalancer.server.port: 443
       traefik.http.services.teleport.loadbalancer.server.scheme: https
       com.centurylinklabs.watchtower.monitor-only: true
     volumes:
       - ./config:/etc/teleport
       - ./data:/var/lib/teleport
     ports:
+      # - 443:443
       - 3022:3022
       - 3023:3023
       - 3024:3024
       - 3025:3025
-      - 3080:3080
 
 networks:
   hp1-network:
