--- a/teleport/config/teleport.yaml
+++ b/teleport/config/teleport.yaml
@@ -13,15 +13,24 @@ teleport:
 
 auth_service:
   enabled: "yes"
+  # listen_addr: 0.0.0.0:3025
   cluster_name: teleport.castelnuovo.dev
-  public_addr: teleport.castlenuovo.dev:443
-  proxy_listener_mode: multiplex
+  public_addr: teleport.castlenuovo.dev:3025
+  proxy_listener_mode: separate
+  # proxy_listener_mode: multiplex
   # authentication:
   #   type: local
   #   second_factor: otp
   #   require_session_mfa: yes
 
+ssh_service:
+  enabled: "no"
+
 proxy_service:
   enabled: "yes"
+  # listen_addr: 0.0.0.0:3023
+  # tunnel_listen_addr: 0.0.0.0:3024
+  public_addr: teleport.castelnuovo.dev
+  # ssh_public_addr: teleport.castelnuovo.dev
   https_keypairs: []
   acme: {}
