Restart watchtower policy

--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   watchtower:
     image: containrrr/watchtower:latest
     container_name: watchtower
-    # restart: unless-stopped
+    restart: unless-stopped
     security_opt:
       - no-new-privileges:true
     volumes:
