--- a/authelia/config/configuration.yml
+++ b/authelia/config/configuration.yml
@@ -43,6 +43,11 @@ access_control:
       subject:
         - group:stats.castelnuovo.dev
 
+    - domain: status.castelnuovo.dev
+      policy: one_factor
+      subject:
+        - group:status.castelnuovo.dev
+
     # Two-factor rules
     ####################
     - domain:
