--- a/authelia/config/configuration.yml
+++ b/authelia/config/configuration.yml
@@ -46,6 +46,7 @@ access_control:
     - domain: status.castelnuovo.dev
       policy: bypass
       resources:
+        - "^/api([/?].*)?$"
         - "^/status([/?].*)?$"
         - "^/assets([/?].*)?$"
 
