--- a/plausible/.env.example
+++ b/plausible/.env.example
@@ -1,5 +1,3 @@
-PLAUSIBLE_BASE_URL=http://localhost:8000
-PLAUSIBLE_SECRET_KEY_BASE=# openssl rand -base64 32
-PLAUSIBLE_DATABASE_URL=postgres://user:password@postgres/stats_db
-PLAUSIBLE_ADMIN_USER_PWD=
-PLAUSIBLE_SMTP_USER_PWD=
+PLAUSIBLE_KEY=# openssl rand -base64 32
+PLAUSIBLE_ADMIN_PASSWORD=
+PLAUSIBLE_MAIL_PASSWORD=
