Update authelia env

--- a/authelia/.env.example
+++ b/authelia/.env.example
@@ -1,6 +1,6 @@
-AUTHELIA_JWT_SECRET=# openssl rand -base64 32
-AUTHELIA_SESSION_SECRET=# openssl rand -base64 32
-AUTHELIA_STORAGE_ENCRYPTION_KEY=# openssl rand -base64 32
-AUTHELIA_STORAGE_MYSQL_PASSWORD=
-AUTHELIA_NOTIFIER_SMTP_PASSWORD=
-AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD=
+AUTHELIA_JWT_KEY=# openssl rand -base64 32
+AUTHELIA_SESSION_KEY=# openssl rand -base64 32
+AUTHELIA_ENCRYPTION_KEY=# openssl rand -base64 32
+AUTHELIA_DB_PASSWORD=
+AUTHELIA_MAIL_PASSWORD=
+AUTHELIA_LDAP_PASSWORD=
