--- a/authelia/docker-compose.yml
+++ b/authelia/docker-compose.yml
@@ -15,12 +15,12 @@ services:
     volumes:
       - ./config:/config
     environment:
-      AUTHELIA_JWT_SECRET: ${AUTHELIA_JWT_SECRET:?error}
-      AUTHELIA_SESSION_SECRET: ${AUTHELIA_SESSION_SECRET:?error}
-      AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_STORAGE_ENCRYPTION_KEY:?error}
-      AUTHELIA_STORAGE_MYSQL_PASSWORD: ${AUTHELIA_STORAGE_MYSQL_PASSWORD:?error}
-      AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${AUTHELIA_NOTIFIER_SMTP_PASSWORD:?error}
-      AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ${AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD:?error}
+      AUTHELIA_JWT_SECRET: ${AUTHELIA_JWT_KEY:?error}
+      AUTHELIA_SESSION_SECRET: ${AUTHELIA_SESSION_KEY:?error}
+      AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_ENCRYPTION_KEY:?error}
+      AUTHELIA_STORAGE_MYSQL_PASSWORD: ${AUTHELIA_DB_PASSWORD:?error}
+      AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${AUTHELIA_MAIL_PASSWORD:?error}
+      AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ${AUTHELIA_LDAP_PASSWORD:?error}
 
 networks:
   hp1-network:
